<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BenzStore</string>
    <string name="store_subtitle">Unified AppStore for Android &amp; PC</string>
    <string name="search_hint">Apps durchsuchen...</string>
    <string name="category_apps">Apps</string>
    <string name="category_pc">PC &amp; Desktop</string>
    <string name="category_server">Server &amp; Cloud</string>
    <string name="versions_btn">Versionen ▾</string>
    <string name="updates_available_title">Updates verfügbar</string>
    <string name="updates_banner_text">⚡ %d Update(s) verfügbar für installierte Apps</string>
    <string name="install">Installieren</string>
    <string name="installed">Installiert</string>
    <string name="update">Aktualisieren</string>
    <string name="open_app">Öffnen</string>
    <string name="version_label">Version wählen:</string>
    <string name="latest_badge">Latest</string>
    <string name="verifying_sha256">Kryptografische Prüfsumme (SHA-256) wird verifiziert...</string>
    <string name="security_verified">SHA-256 Integrität bestätigt</string>
    <string name="security_error">Sicherheitsfehler: SHA-256 Prüfsumme stimmt nicht mit Store-Manifest überein!</string>
    <string name="downloading">Wird heruntergeladen...</string>
    <string name="install_permission_needed">Bitte erlaube BenzStore die Installation von Apps aus dieser Quelle.</string>
</resources>
